# yoetz

./: .gitignore  .gitleaks.toml  .promptcodeignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  cliff.toml  demo.tape  deny.toml  prompt.md  rustfmt.toml
.agents/skills/yoetz/: SKILL.md
.cargo/: config.toml
.claude-plugin/: plugin.json
.claude/skills/: yoetz
.claude/skills/yoetz/: SKILL.md
.claude/skills/yoetz/references/: commands.md
.codex-plugin/: plugin.json
.codex/skills/yoetz/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: auto-tag-release.yml  ci.yml  notify-marketplace.yml  publish-skill.yml  release.yml
crates/litellm-rs/: Cargo.toml  README.md
crates/litellm-rs/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  registry.rs  router.rs  stream.rs  types.rs
crates/litellm-rs/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs
crates/litellm-rs/tests/: integration_providers.rs  stream.rs
crates/yoetz-cli/: Cargo.toml
crates/yoetz-cli/assets/: live-cdp-daemon.mjs
crates/yoetz-cli/assets/live-cdp-daemon-src/: build.mjs  daemon.ts  live-cdp-browser.ts  package-lock.json  package.json
crates/yoetz-cli/src/: browser.rs  browser_extension_native.rs  budget.rs  chatgpt_recipe.rs  chatgpt_web.rs  dev_browser.rs  fuzzy.rs  http.rs  live_attach.rs  live_cdp_daemon.rs  main.rs  registry.rs
crates/yoetz-cli/src/chrome_devtools_mcp/: chatgpt.rs  client.rs  mod.rs
crates/yoetz-cli/src/commands/: apply.rs  ask.rs  bundle.rs  council.rs  generate.rs  mod.rs  models.rs  pricing.rs  review.rs
crates/yoetz-cli/src/providers/: gemini.rs  mod.rs  openai.rs
crates/yoetz-cli/tests/: cli.rs  daemon_policy.rs
crates/yoetz-core/: Cargo.toml
crates/yoetz-core/src/: bundle.rs  config.rs  lib.rs  media.rs  output.rs  paths.rs  registry.rs  session.rs  types.rs
docs/: config.example.toml
docs/decisions/: ADR-001-live-attach-owner.md
extensions/chatgpt-native/: manifest.json  native-host-manifest.template.json  package.json  popup.html  popup.js
extensions/chatgpt-native/src/: chatgpt-dom.js  chunks.js  content-script.js  protocol.js  service-worker.js
extensions/chatgpt-native/tests/: chunks.test.js  content-script.test.js  dom.test.js  fake-chatgpt.test.js  manifest.test.js  protocol.test.js  service-worker.test.js
recipes/: chatgpt.yaml  claude.yaml  gemini.yaml
research/browser-replacement-prototype/: Cargo.toml  README.md
research/browser-replacement-prototype/src/: main.rs
scripts/: agent-browser  build-chatgpt-native-extension.sh  build-live-cdp-daemon.sh  chatgpt-browser-canary.sh  check-release-version.sh  ci-real-browser-smoke.sh  extract-cookies.mjs  package-lock.json  package.json  release-skills.sh  release.sh  setup-chatgpt-profile.sh
skills/yoetz/: SKILL.md
skills/yoetz/references/: commands.md
