[workspace]
resolver = "2"
members = ["crates/yoetz-core", "crates/yoetz-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/avivsinai/yoetz"
homepage = "https://github.com/avivsinai/yoetz"
description = "Fast CLI-first LLM council, bundler, and multimodal gateway for coding agents"
keywords = ["llm", "cli", "ai", "multimodal", "code-review"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Aviv Sinai"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
ignore = "0.4"
rand = "0.8"
time = { version = "0.3", features = ["formatting", "macros"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
mime_guess = "2.0"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Enable standard warnings
all = { level = "warn", priority = -1 }
# Disable noisy lints
cast_possible_truncation = "allow"
needless_pass_by_value = "allow"
too_many_arguments = "allow"
items_after_test_module = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
