[package]
name = "litellm-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
bytes = "1.5"
futures-util = "0.3"
async-stream = "0.3"
base64 = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
wiremock = "0.6"
tokio-test = "0.4"
