[package]
name = "yoetz"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
time = { workspace = true }
serde_yaml = "0.9"
tempfile = "3.10"

[dependencies.yoetz-core]
path = "../yoetz-core"
