[package]
name = "yoetz-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/yoetz-core"
description = "Core types and utilities for yoetz LLM gateway"
keywords = ["llm", "ai", "bundler"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
ignore.workspace = true
rand.workspace = true
time.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
mime_guess.workspace = true
