[package]
name = "browser-replacement-prototype"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
chromiumoxide = "0.9.1"
futures = "0.3"
rmcp = { version = "1.3.0", features = ["client", "transport-child-process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
